# ComputerVision

./: DeployYOLOmodel.py  EasyOCRTutorial.py  HistComparison.cpp  Mask_R_CNN_Image_Segmentation_Demo.ipynb  ObjectTrackingDeepSORT.py  OpenCVTestFile.cpp  StereoCalibratePointCloud.py  backgroundSub.py  backgroundSub2.py  binaryVision.cpp  cameraCalibration.py  cornerDetection.cpp  deployNeuralNetwork.py  deployYoloModel.py  depthFace.py  depthMaps.py  depthTo3d.py  depthToPointCloud.py  edgeDetection.cpp  faceDetection.py  faceMesh.py  haarCascadeClassifier.cpp  handDetection.py  headPoseEstimation.py  hill_climb_racing.py  holisticDetection.py  houghTransform.cpp  introductionOpenCV.cpp  liveFPScount.cpp  liveFPScount.py  main.cpp  mouse.h  neuralNetwork.py  neuralNetworkPencil.py  neuralNetworkSingleImages.py  pointCloudStereoVision.py  poseDetection.py  poseEstimation.py  sift.py  siftFeatureMatching.py  (+4 more)
ArUco/: arucoDetection.py  arucoPoseEstimation.py  generateAruco.py
FaceRecognition/: faceRecognition.py  faceRecognitionCamera.py  faceRecognitionWebcam.py
InstanceSegmentation/: customInstanceSegmentation.py  instanceSegmentation.py  instanceSegmentationLive.py  segmentationBackground.py  semanticSegmentation.py
LiveCameraTrajectory/: cameraCalibration.py  getImages.py  intrinsicNew.npy  liveCameraPoseEstimation.py
MonocularDepth/: depthEstimationMono.cpp  depthFaceTracker.py  midasDepthMap.py
OpenCVGPU/: CMakeLists.txt  cudaDeviceInfo.cpp  cudaDeviceInfo.py
OpenCVcuda/: coreMatrixOperations.cpp  gpuTest.cpp  (+2 more)
VSCodeOpenCV/: CMakeLists.txt  main.cpp
(+52 files in other folders)
